--- a/journal/202001.md
+++ b/journal/202001.md
@@ -29,108 +29,47 @@ Find the full release notes and downloads on the [release page](https://github.c
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd):
+[dcrd](https://github.com/decred/dcrd): Service script for OpenBSD rc.d was [added](https://github.com/decred/dcrd/pull/2030) in addition to the [existing](https://github.com/decred/dcrd/tree/master/release/services) systemd and SMF configs. HTTP seeder support was added [to dcrseeder](https://github.com/decred/dcrseeder/pull/25) and [to dcrd](https://github.com/decred/dcrd/pull/2017). `chainec` package was [removed](https://github.com/decred/dcrd/pull/2039) because of the practical issues encountered with this generic crypto API. Nonce generation was [improved and optimized](https://github.com/decred/dcrd/pull/2044) by specializing the implementation specifically for secp256k1 and modifying it in such a way that signing can no longer fail in the extremely unlikely event a returned nonce results in an invalid signature.
 
-Service script for OpenBSD rc.d was [added](https://github.com/decred/dcrd/pull/2030) in addition to the [existing](https://github.com/decred/dcrd/tree/master/release/services) systemd and SMF configs.
+[dcrwallet](https://github.com/decred/dcrwallet): Multiple bug fixes for the v1.5.1 release.
 
-HTTP seeder support was added [to dcrseeder](https://github.com/decred/dcrseeder/pull/25) and [to dcrd](https://github.com/decred/dcrd/pull/2017).
-
-`chainec` package was [removed](https://github.com/decred/dcrd/pull/2039) because of the practical issues encountered with this generic crypto API.
-
-Nonce generation was [improved and optimized](https://github.com/decred/dcrd/pull/2044) by specializing the implementation specifically for secp256k1 and modifying it in such a way that signing can no longer fail in the extremely unlikely event a returned nonce results in an invalid signature.
-
-[dcrwallet](https://github.com/decred/dcrwallet):
-
-Multiple bug fixes for the v1.5.1 release.
-
-[Decrediton](https://github.com/decred/decrediton):
-
-Lots of bug fixes and UI enhancements for the v1.5.1 release.
+[Decrediton](https://github.com/decred/decrediton): Lots of bug fixes and UI enhancements for the v1.5.1 release.
 
 Work continues to [refactor startup](https://github.com/decred/decrediton/issues/2121) to utilize a hierarchical state machine.
 
-[Politeia](https://github.com/decred/politeia):
-
-The Decred Contractor Clearance (DCC) component of the CMS has launched and started processing DCC issuances.
-
-CMS received a bunch of fixes and UI enhancements.
+[Politeia](https://github.com/decred/politeia): The Decred Contractor Clearance (DCC) component of the CMS has launched and started processing DCC issuances. CMS received a bunch of fixes and UI enhancements.
 
 Work continues on the CMS UI [redesign](https://github.com/decred/politeiagui/pull/1625) and adding dark mode to Politeia.
 
-[dcrstakepool](https://github.com/decred/dcrstakepool):
-
-dcrstakepool v1.5.0 was released. This release contains all development work completed since v1.2.0 (Sep 2019). Since then, 7 contributors have produced and merged 37 pull requests. Changes include minor GUI enhancements, improved HTTP request logging, streamlining of existing code, and various bug fixes. For the full list of changes and upgrade path see the [release notes](https://github.com/decred/dcrstakepool/blob/master/docs/release-note-1.5.0.md).
+[dcrstakepool](https://github.com/decred/dcrstakepool): dcrstakepool v1.5.0 was released. This release contains all development work completed since v1.2.0 (Sep 2019). Since then, 7 contributors have produced and merged 37 pull requests. Changes include minor GUI enhancements, improved HTTP request logging, streamlining of existing code, and various bug fixes. For the full list of changes and upgrade path see the [release notes](https://github.com/decred/dcrstakepool/blob/master/docs/release-note-1.5.0.md).
 
 A new high level design was [proposed](https://github.com/decred/dcrstakepool/issues/574) for removing VSP accounts that also removes fees from VSP ticket transactions, making it possible for both solo and VSP stakers to purchase mixed tickets in the same anonymity set.
 
-[dcrpool](https://github.com/decred/dcrpool):
+[dcrpool](https://github.com/decred/dcrpool): Completed large [refactoring](https://github.com/decred/dcrpool/pull/143) to decouple components and facilitate increasing test coverage.
 
-Completed large [refactoring](https://github.com/decred/dcrpool/pull/143) to decouple components and facilitate increasing test coverage.
-
-[dcrlnd](https://github.com/decred/dcrlnd):
-
-Docker examples [finished](https://github.com/decred/dcrlnd/pull/66) that automate the deployment of simnet environments with docker-compose.
-
-A beginner's guide to testing the Decred LN was [published](https://medium.com/decred/beginner-guide-to-the-decred-dcr-lightning-network-917f8ad304aa) on Medium.
-
-Bug fixes, documentation improvements.
+[dcrlnd](https://github.com/decred/dcrlnd): Docker examples [finished](https://github.com/decred/dcrlnd/pull/66) that automate the deployment of simnet environments with docker-compose. A beginner's guide to testing the Decred LN was [published](https://medium.com/decred/beginner-guide-to-the-decred-dcr-lightning-network-917f8ad304aa) on Medium. Bug fixes, documentation improvements.
 
 Work continues to [port upstream changes](https://github.com/decred/dcrlnd/pull/74) up to the recently released [v0.9.0-beta](https://github.com/lightningnetwork/lnd/releases/tag/v0.9.0-beta) version. The ported changeset includes 503 commits that add 37K and remove 11K lines of code.
 
-[cspp](https://github.com/decred/cspp):
+[cspp](https://github.com/decred/cspp): Bug fixes and code maintenance. A copy of Go's internal chacha20 package was [removed](https://github.com/decred/cspp/pull/38) in favor of the recently released public API.
 
-Bug fixes and code maintenance. A copy of Go's internal chacha20 package was [removed](https://github.com/decred/cspp/pull/38) in favor of the recently released public API.
-
-[dcrdex](https://github.com/decred/dcrdex):
-
-Completed work highlights:
-
-- client DCR exchange [wallet](https://github.com/decred/dcrdex/pull/92)
-- client bbolt-based [database](https://github.com/decred/dcrdex/pull/99)
-- client [web server](https://github.com/decred/dcrdex/pull/103) to enable client access via browser
-- initial [client core](https://github.com/decred/dcrdex/pull/120) application { what does "core" do? }
-- client application [skeleton](https://github.com/decred/dcrdex/pull/100)
-- client registration of new [DEX account](https://github.com/decred/dcrdex/pull/140) through the web interface
-- server app config and asset drivers [system](https://github.com/decred/dcrdex/pull/81) { need help explaining what it does in a few words }
-- added implementation of 64-bit [Mersenne Twister](https://github.com/decred/dcrdex/pull/137) PRNG
-
-{ anything to add? }
+[dcrdex](https://github.com/decred/dcrdex): Completed work highlights: client DCR exchange [wallet](https://github.com/decred/dcrdex/pull/92), client bbolt-based [database](https://github.com/decred/dcrdex/pull/99), client [web server](https://github.com/decred/dcrdex/pull/103) to enable client access via browser, initial [client core](https://github.com/decred/dcrdex/pull/120) application, client application [skeleton](https://github.com/decred/dcrdex/pull/100), client registration of new [DEX account](https://github.com/decred/dcrdex/pull/140) through the web interface, server app config and asset drivers [system](https://github.com/decred/dcrdex/pull/81), added implementation of 64-bit [Mersenne Twister](https://github.com/decred/dcrdex/pull/137) PRNG.
 
 A total of 27 pull requests merged adding 22K and deleting 4K lines.
 
-[dcrandroid](https://github.com/decred/dcrandroid):
-
-Layout on the restore wallet page was [improved](https://github.com/decred/dcrandroid/pull/422).
+[dcrandroid](https://github.com/decred/dcrandroid): Layout on the restore wallet page was [improved](https://github.com/decred/dcrandroid/pull/422).
 
 The dcrlibwallet mobile library shared between Android and iOS apps received a bunch of bug fixes and was [upgraded](https://github.com/raedahgroup/dcrlibwallet/pull/93) to v1.5.0 release of dcrd and dcrwallet.
 
-[dcrios](https://github.com/raedahgroup/dcrios):
+[dcrios](https://github.com/raedahgroup/dcrios): UI enhancements, performance optimizations. Overview page UI cleanup and sync [improvements](https://github.com/raedahgroup/dcrios/pull/566), multi-wallet [optimizations](https://github.com/raedahgroup/dcrios/pull/572), preliminary [migration](https://github.com/raedahgroup/dcrios/pull/558) to dcrlibwallet's multi-wallet feature, switched to dcrlibwallet's [config storage](https://github.com/raedahgroup/dcrios/pull/576). A new UI was implemented for the [password/PIN](https://github.com/raedahgroup/dcrios/pull/551) setup, [seed backup](https://github.com/raedahgroup/dcrios/pull/530) and [restore from seed](https://github.com/raedahgroup/dcrios/pull/527) features.
 
-UI enhancements, performance optimizations.
+[dcrdata](https://github.com/decred/dcrdata): Small fixes and UI improvements.
 
-Overview page UI cleanup and sync [improvements](https://github.com/raedahgroup/dcrios/pull/566), multi-wallet [optimizations](https://github.com/raedahgroup/dcrios/pull/572), preliminary [migration](https://github.com/raedahgroup/dcrios/pull/558) to dcrlibwallet's multi-wallet feature, switched to dcrlibwallet's [config storage](https://github.com/raedahgroup/dcrios/pull/576).
+[tinydecred](https://github.com/decred/tinydecred): RPC client was [added](https://github.com/decred/tinydecred/issues/45) with most commands implemented by now. Added a button to [revoke](https://github.com/decred/tinydecred/pull/30) missed and expired tickets. Database was [redesigned](https://github.com/decred/tinydecred/pull/42) to support custom encoding, batch insertion, namespaces, and more. Improved [test coverage](https://github.com/decred/tinydecred/pull/47) to ~73%. Restructured the project to make it [packageable](https://github.com/decred/tinydecred/pull/59).
 
-A new UI was implemented for the [password/PIN](https://github.com/raedahgroup/dcrios/pull/551) setup, [seed backup](https://github.com/raedahgroup/dcrios/pull/530) and [restore from seed](https://github.com/raedahgroup/dcrios/pull/527) features.
+[docs](https://github.com/decred/dcrdocs): [dcrlnd](https://docs.decred.org/wallets/lightning/) commands and arguments for the CLI have been [documented](https://github.com/decred/dcrdocs/pull/1055). Setup instructions for [Trezor](https://docs.decred.org/wallets/decrediton/trezor/) on Decrediton were [added](https://github.com/decred/dcrdocs/pull/1062). [Reading list](https://docs.decred.org/getting-started/reading-list/) was [added](https://github.com/decred/dcrdocs/pull/1043) to the Getting Started section containing curated selection of articles, podcasts, video and other materials (based on Ditto's Educational Resources Repository). [BLAKE-256](https://docs.decred.org/research/blake-256-hash-function/) page has been significantly [extended](https://github.com/decred/dcrdocs/pull/1034) to explain why this function was chosen. Two new definitions (Coin Type and HD Wallet) were [added](https://github.com/decred/dcrdocs/pull/1057) to [Glossary](https://docs.decred.org/glossary/).
 
-[dcrdata](https://github.com/decred/dcrdata):
-
-Small fixes and UI improvements.
-
-[tinydecred](https://github.com/decred/tinydecred):
-
-- RPC client was [added](https://github.com/decred/tinydecred/issues/45) with most commands implemented by now
-- Added a button to [revoke](https://github.com/decred/tinydecred/pull/30) missed and expired tickets
-- Database was [redesigned](https://github.com/decred/tinydecred/pull/42) to support custom encoding, batch insertion, namespaces, and more
-- Improved [test coverage](https://github.com/decred/tinydecred/pull/47) to ~73%
-- Restructured the project to make it [packageable](https://github.com/decred/tinydecred/pull/59)
-
-[docs](https://github.com/decred/dcrdocs):
-
-[dcrlnd](https://docs.decred.org/wallets/lightning/) commands and arguments for the CLI have been [documented](https://github.com/decred/dcrdocs/pull/1055). Setup instructions for [Trezor](https://docs.decred.org/wallets/decrediton/trezor/) on Decrediton were [added](https://github.com/decred/dcrdocs/pull/1062). [Reading list](https://docs.decred.org/getting-started/reading-list/) was [added](https://github.com/decred/dcrdocs/pull/1043) to the Getting Started section containing curated selection of articles, podcasts, video and other materials (based on Ditto's Educational Resources Repository). [BLAKE-256](https://docs.decred.org/research/blake-256-hash-function/) page has been significantly [extended](https://github.com/decred/dcrdocs/pull/1034) to explain why this function was chosen. Two new definitions (Coin Type and HD Wallet) were [added](https://github.com/decred/dcrdocs/pull/1057) to [Glossary](https://docs.decred.org/glossary/).
-
-[decred.org](https://github.com/decred/dcrweb):
-
-Updated [contributors](https://github.com/decred/dcrweb/pull/774), cleanup.
+[decred.org](https://github.com/decred/dcrweb): Updated [contributors](https://github.com/decred/dcrweb/pull/774), cleanup.
 
 Dev activity stats for January: 246 active PRs, 210 master commits, 58K added and 25K deleted lines spread across 17 repositories. Contributions came from 3-6 developers per repository.
 
