--- a/journal/202001.md
+++ b/journal/202001.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – January 2020
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/journal-202001-384.png)
 
-_Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
+_Image: Event Horizon by @saender_
 
 Highlights for January:
 
@@ -311,4 +311,4 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, Dustorf, kozel, richardred, s\_ben
 - reviews and feedback: ammarooni, buck54321, davecgh, dnldd, emiliomann, jholdstock, lukebp, matheusd
-- title image: {}
+- title image: saender
