Remove treasury coindesk quote

--- a/journal/202001.md
+++ b/journal/202001.md
@@ -115,11 +115,7 @@ There were 6 proposals submitted in Jan, 5 have already been voted on and 1 is s
 
 Politeia Digest [issue 26](https://blockcommons.red/politeia-digest/issue026/) has more detail on all of the proposals and the Market Maker auditing. Auditing tools have been developed which process i2's order open/close history to calculate uptime on a percentage basis. If uptime is less than the 90% quoted in i2's proposal, their fees for the month will be reduced proportionally.
 
-Also in January, CoinDesk published an [article](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet) which referenced Decred Treasury spending figures:
-
-> To be fair, cryptocurrency has already proven its usefulness through cross-border collaboration. For example, the Decred treasury has distributed roughly $3.5 million worth of cryptocurrency to more than 60 contributors, according to the community's press representative. Roughly 30 percent of these contributors hail from Latin America and 15 percent are from Africa, a more global distribution than comparable Silicon Valley startups.
-
-Some additional figures were calculated for the article at that time (end of Nov 2019). The Treasury had paid out the equivalent of $6.55 million, with 54.7% being paid to developers. Since Politeia launched in Oct 2018, more than 10% of Treasury spending has gone to projects proposed and passed via Politeia. By geographical region, 30% of Decred's developers are in Central/South America, 25% in the US, 20% in Europe, 15% in Africa, and 10% in Asia.
+Also in January, CoinDesk published an [article](https://www.coindesk.com/is-bitcoin-in-2020-really-like-the-early-internet) which referenced Decred Treasury spending figures. Some additional figures were calculated for the article at that time (end of Nov 2019). The Treasury had paid out the equivalent of $6.55 million, with 54.7% being paid to developers. Since Politeia launched in Oct 2018, more than 10% of Treasury spending has gone to projects proposed and passed via Politeia. By geographical region, 30% of Decred's developers are in Central/South America, 25% in the US, 20% in Europe, 15% in Africa, and 10% in Asia.
 
 ## Network
 
