Port recent template fixes

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -8,7 +8,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
+{ hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
 
 [dcrd](https://github.com/decred/dcrd): {}
 
@@ -50,11 +50,13 @@ Dev activity stats for February: {n} active PRs, {n} master commits, {n}K added 
 
 Welcome to new first time contributors with code merged to master: {list people who made meaningful commits merged in master branches, ordered by repo importance, format as: username ([repo](link to user's commits))}
 
-Congratulations to {n} contributors listed on [decred.org](https://decred.org/contributors/):
+Congratulations to [active contributors](https://decred.org/contributors/) listed on decred.org:
 
-- {name, sort names alphabetically} ({nickname}, {title})
+- {name, sort names alphabetically} ({nickname}, {title or domain})
 
-{welcome new individual and company contractors listed on decred.org}
+{welcome new corporate contractors with short intros, if any}
+
+The following people were removed from the list of [active contributors](https://decred.org/contributors/): {...} Thank you for all the good work and don't hesitate to drop by! { rotate/improve the thank you + inviting message if possible }
 
 {updates from existing contractors}
 
@@ -82,29 +84,25 @@ In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 
 ## Network
 
-{cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers}
+{ hint: cross-check dcrdata.org, dcrstats.com and charts.dcr.farm to get the numbers }
 
 Hashrate: February's hashrate opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate distribution as of {date}: {pool name n%, ...} per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
+{ hint: helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
 Staking: 30-day average ticket price was {n.n} DCR (+{n.n}) per dcrstats.com. The price varied between {n.n}-{n.n} DCR. Locked amount was {n.nn}-{n.nn} million DCR, which corresponded to {n.n}-{n.n}% of the available supply.
 
 {recap of ticket price action if it was interesting}
 
-{helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
+{ hint: helpful for nodes: https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=now-40d&to=now }
 
 Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes per {new source?}. Version distribution: {vx.y.z: n% (+n%), ...}.
 
 {any interesting analysis or events in the network}
 
-## Mining
-
-{new miners, relevant news about existing miners, interesting events or stats}
-
 ## Integrations
 
-{new items of infrastructure or updates from existing}
+{ hint: new items of infrastructure or updates from existing }
 
 Exchanges:
 
@@ -199,9 +197,9 @@ In February DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 
 ## Relevant External
 
-{PoW, ASIC resistance, full nodes, cc network security and other cc tech}
+{cc tech: PoW, ASIC resistance, full nodes, cc network security, etc}
 
-{governance, funding, chain forks, community forks, controversy}
+{governance, funding, chain forks, community forks}
 
 { drop if this was covered in Jan } https://www.coindesk.com/zcashs-funding-vote-and-the-problems-with-decentralized-governance
 
@@ -215,7 +213,7 @@ Binance not liking CoinJoin, wake-up call:
 
 {relevant exchanges and websites}
 
-{other: regulations, security, fun}
+{other: regulations, privacy, security, fun}
 
 Casa goes open-source
 
