--- a/journal/202002.md
+++ b/journal/202002.md
@@ -6,6 +6,10 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 
 {introduction, major news of the month ordered by impact, don't put any links here}
 
+## DCP0005 activation reminder
+
+{date?}
+
 ## Development
 
 { hint: add below overview of activity for each project. add any other project that warrants a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
@@ -43,6 +47,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 Other:
 
 - {smaller items go here}
+- https://bounty.decred.org/2020/02/status-update/
 
 Dev activity stats for February: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
 
@@ -80,7 +85,11 @@ Community stats:
 
 In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using February's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At January's average daily rate of $18.00, the USD figure billed for work completed in that month is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
 
+Our Network issue 6 had an interesting chart with Treasury inflows and outflows. As of Jan 30, the Treasury has received a total of 939K DCR and spent 299K DCR. https://ournetwork.substack.com/p/our-network-issue-6
+
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
+
+https://www.blockcommons.red/politeia-digest/issue027/
 
 ## Network
 
@@ -107,6 +116,7 @@ Nodes: As of {date} there were {n} public listening nodes and {n} normal nodes p
 Exchanges:
 
 - Despite being enthusiastic about Decred initially, and even hosting several joint events, OKCoin decided to suspend DCR because of low trading volume https://blog.okcoin.com/scheduled-token-suspensions/
+- KuCoin cashback stuff?
 
 {OTC desks}
 
@@ -129,6 +139,8 @@ New merchants:
 ## Outreach
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
+
+https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/
 
 ## Decred Turns 4
 
@@ -159,7 +171,14 @@ Upcoming:
 Selected articles:
 
 - https://cryptobriefing.com/after-four-years-is-decred-better-bitcoin-yet/
+- https://medium.com/@permabullnino/decred-on-chain-ticket-funding-rates-4e7233c7b64f
+- new issues from Decred Drive https://medium.com/@decreddrive . Thanks to @DecredDragon for all the kind words!
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
+
+{worthy mentions? is it big or good enough for inclusiong?}:
+
+- https://robbreport.com/lifestyle/news/why-now-is-the-best-time-to-invest-in-cryptocurrencies-2898743/
+- https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world
 
 Translations:
 
@@ -168,6 +187,8 @@ Translations:
 Videos:
 
 - Why dex, put simply https://www.youtube.com/watch?v=TNcmLrSPMRc
+- First bi-weekly update by Exitus https://www.youtube.com/watch?v=RMqrIZcR-Iw
+- ivandecredfan continued making educational Decred videos in Russian even after his proposal failed https://www.youtube.com/channel/UCFjXbEDeyhhj2bH2t_eGKGA
 
 Audio:
 
@@ -201,6 +222,16 @@ In February DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 
 {governance, funding, chain forks, community forks}
 
+{ETH ProgPow controversy}
+
+- twitter poll https://twitter.com/crypt0snews/status/1231288498474209280
+- https://twitter.com/RichardRed0x/status/1232870918302715904
+- #NoProgPoW
+
+{EOS unexpectedly} https://twitter.com/RichardRed0x/status/1232437596019494912
+
+{Iota} https://twitter.com/Theeylon/status/1232594929823756288
+
 { drop if this was covered in Jan } https://www.coindesk.com/zcashs-funding-vote-and-the-problems-with-decentralized-governance
 
 {DEX}
@@ -213,7 +244,11 @@ Binance not liking CoinJoin, wake-up call:
 
 {relevant exchanges and websites}
 
+"interruptions" in XTZ withdrawals {more data would be nice} https://twitter.com/Lindw0rm/status/1227696463574118400
+
 {other: regulations, privacy, security, fun}
+
+Blockstream bank?! https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/
 
 Casa goes open-source
 
