--- a/journal/202002.md
+++ b/journal/202002.md
@@ -74,21 +74,27 @@ Community stats:
 - Reddit subscribers: 9,738 (+15)
 - Matrix users: 565 (+32)
 - Discord users: 1,087 (-), verified to post: 450 (+17)
-- Telegram users: 2,678 (+{})
-- YouTube subscribers: 3,990 (+{})
-- Facebook followers: 3,249 (+{}), likes: 3,580 (+{})
+- Telegram users: 2,678 (+50)
+- YouTube subscribers: 3,990 (+40)
+- Facebook followers: 3,249 (+314), likes: 3,580 (+346) - going up faster than usual.
 - LinkedIn followers: {} (+{})
-- GitHub dcrd stars: 535 (+{}), forks: 1,500 (+{})
+- GitHub dcrd stars: 535 (+2), forks: 1,500 (+24)
 
 ## Governance
 
-In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using February's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At January's average daily rate of $18.00, the USD figure billed for work completed in that month is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
+In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,018 DCR and spent 12,622 DCR. Using February's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At January's average daily rate of $18.00, the USD figure billed for work completed in that month is ${n}K. As of Mar 2, Treasury balance is 643,179 DCR ($11.6 million USD at $18).
 
-Our Network issue 6 had an interesting chart with Treasury inflows and outflows. As of Jan 30, the Treasury has received a total of 939K DCR and spent 299K DCR. https://ournetwork.substack.com/p/our-network-issue-6
+Our Network [issue](https://ournetwork.substack.com/p/our-network-issue-6) 6 had an interesting chart with Treasury inflows and outflows. As of Jan 30, the Treasury has received a total of 939K DCR and spent 299K DCR.
 
-{high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
+In February there were 4 new proposals submitted, and 5 started voting.
 
-https://www.blockcommons.red/politeia-digest/issue027/
+* @Exitus' video production proposal which requested up to $2,400 per month was approved with 92.5% approval and voter participation of 24.8%.
+* @Checkmate's second research proposal was approved with an approval rate of 81% and voter participation of 21.5%. It requested a budget of $17,500 to continue @checkmate's research and other activities, including helping to get some charts from his and @Permabullnino's work onto dcrdata. 
+* The proposal for European marketing and events from @Haon and supported by @jholdstock, @kozel, @jazzah, @mm and @karamble {was rejected on Feb 3}.
+* The Russian video production proposal was rejected with 21% approval and 20% turnout.
+* The Decred Creative Economy proposal from oscargamboae was rejected with 3% approval, and becomes the first proposal to fail to meet the 20% quorum requirement, with just 15% of eligible tickets turning out to vote.
+
+For more detail on the month's Politeia activity see Politeia Digest issue [27](https://blockcommons.red/politeia-digest/issue027/) and [28](https://blockcommons.red/politeia-digest/issue028/).
 
 ## Network
 
