--- a/journal/202002.md
+++ b/journal/202002.md
@@ -191,6 +191,8 @@ Selected articles:
 
 - https://cryptobriefing.com/after-four-years-is-decred-better-bitcoin-yet/
 - https://medium.com/@permabullnino/decred-on-chain-ticket-funding-rates-4e7233c7b64f
+- https://medium.com/@permabullnino/decred-on-chain-macro-micro-outlook-12a26930623e
+- https://cryptoeq.io/coreReports/decred-abridged
 - new issues from Decred Drive https://medium.com/@decreddrive . Thanks to @DecredDragon for all the kind words!
 - {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
 
@@ -253,6 +255,8 @@ In February DCR was trading between USD {n.nn}-{n.nn} / BTC {}-{}. The average d
 {Iota} https://twitter.com/Theeylon/status/1232594929823756288
 
 { drop if this was covered in Jan } https://www.coindesk.com/zcashs-funding-vote-and-the-problems-with-decentralized-governance
+
+{what BCH/LTC/BTC funding dramas mentioned in https://twitter.com/michae2xl/status/1231642734185844737 ? }
 
 {DEX}
 
