People fix numbers

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -73,12 +73,12 @@ Community stats:
 - Twitter followers: 40,901 (+41)
 - Reddit subscribers: 9,738 (+15)
 - Matrix users: 565 (+32)
-- Discord users: 1,087 (-), verified to post: 450 (+17)
-- Telegram users: 2,678 (+50)
+- Discord users: 1,087 (-1,583), verified to post: 450 (+17) (see Community Discussions about the purge)
+- Telegram users: 2,678 (-50)
 - YouTube subscribers: 3,990 (+40)
-- Facebook followers: 3,249 (+314), likes: 3,580 (+346) - going up faster than usual.
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: 535 (+2), forks: 1,500 (+24)
+- Facebook followers: 3,580 (+17), likes: 3,249 (+15)
+- LinkedIn followers: 719 (+30)
+- GitHub dcrd stars: 535 (+2), forks: 1,496 (+20)
 
 ## Governance
 
