--- a/journal/202002.md
+++ b/journal/202002.md
@@ -157,17 +157,17 @@ New merchants:
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+On February 8th, Decred turned four, and the community celebrated the event with #DecredGlobalMeetup. Events took place in at least a dozen cities all across the world to celebrate the community and technology Decred has built. @Dustorf wrote [a blog summarizing Decred's progress to date](https://medium.com/@dlefebvr/on-saturday-february-8th-the-decred-blockchain-will-have-been-adding-blocks-for-4-years-17fe3038f3bf).
 
-https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/
+@Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) on the Decred blog detailing all project marketing related expenses from last year. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leveraging the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but failed. It is expected that proposals for Brazil, the United States and Canada, Australia, and Europe will be made in March.
 
-## Decred Turns 4
+Monde PR came on board and quickly established project public relations goals, target audiences, key messages, established credibility bullet points, documented key topics, performed a competitor analysis, documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements.
 
-{ separate section to cover anniversary action? or distribute across regular sections? }
+Decred in Depth released two episodes in February. The first featured Ammar Naseer, titled [Decred, an economic breakthrough](https://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough), and the second featuring Elian Huesca was titled, [DCR in LATAM](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam). Additionally, @Mr. Black worked with @checkmatey_ and @permabullnino_ to release a new, trading-focused podcast titled "[Rough Consensus](https://podcasts.google.com/?feed=aHR0cDovL2RlY3JlZGluZGVwdGgubGlic3luLmNvbS9yc3M&episode=OWQ1MmU3ZWMtMjUzYy00MzU0LThlYzktZmUyYjU5MzI2YjUx&hl=en&ved=2ahUKEwiVouvaoIHoAhXNK80KHZFiC0sQieUEegQICxAE&ep=6)."
 
-https://medium.com/@dlefebvr/on-saturday-february-8th-the-decred-blockchain-will-have-been-adding-blocks-for-4-years-17fe3038f3bf
+On February 18th, DCR Comic released a comic featuring [The Lightning Network](https://twitter.com/DCRComic/status/1229792848188444672?s=20). All of their work can be viewed on their [website](https://dcrcomic.org/).
 
-\#DecredGlobalMeetup
+Checkmatey_ published an extremely interesting piece titled, [Observing Ethereum Governance during the ProgPoW Debate](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad). This article describes the shortcomings of Ethereum's governance system and how Decred's tools and methodologies can be employed to solve them. It is an excellent example of inserting Decred's points of differentiation into wider conversations, and was [well-received by many in the Ethereum community, including David Hoffman](https://twitter.com/TrustlessState/status/1234653059424358400?s=20), co-host of the POV Crypto podcast.
 
 ## Events
 
